# Molecfit

./: .gitignore  Makefile
documents/: .~lock.LBLRTM_ODA_NOTES.odt#  LBLRTM_ODA_NOTES.odt  MolecfitODA_Notes.odt  Untitled 1.odt
lblrtmio/: .gitignore  Makefile  TestAllOD.f90
lblrtmio/src/: .gitignore  Makefile  ODdefltParse.f90  ODintMerge.f90  ODintParse.f90  ReadTape10.f90  TestAllOD.f90  nswc.f90  test.f90
libcerf/: Makefile
perl_scripts/: diff_search.pl
python_scripts/: .ReadTape12.py.kate-swp  CompareTAPE5.py  Makefile  PlotTAPE28.py  ReadTAPE28.py  ReadTAPE3.py  ReadTAPE5.py  ReadTape12.py  TAPE28  TAPE5  utils.py
python_scripts/OpticalDepthAdaptation/: CommonUtils.py  lblrtmOda.py  lblrtm_old.py  lnflOda.py  mbmOda.py  mrgOda.py  plot28.py
python_scripts/lnlfl_tape5/: TAPE1  TAPE5  lnfnlTAPE5.py
python_scripts/lnlfl_tape5/CH4/: TAPE10  TAPE3  TAPE5  TAPE6  TAPE7
python_scripts/lnlfl_tape5/H2O/: TAPE1  TAPE10  TAPE3  TAPE5  TAPE6  TAPE7
python_scripts/lnlfl_tape5/O3/: TAPE10  TAPE3  TAPE5  TAPE6  TAPE7
python_scripts/lnlfl_tape5/TAPE3_DIR/CH4/: TAPE3
python_scripts/lnlfl_tape5/TAPE3_DIR/H2O/: TAPE3
python_scripts/lnlfl_tape5/TAPE3_DIR/O3/: TAPE3
test/: Makefile
test/ALAIN_DEBUG_AUG2023/SINFONI/: cleanup.sh  run_alain.sh
test/ALAIN_DEBUG_AUG2023/SINFONI/config/: model.rc
test/ALAIN_DEBUG_AUG2023/SINFONI/ref_data/: BEST_FIT_PARAMETERS_t1.txt
test/ALAIN_DEBUG_AUG2023/SINFONI/sof/: model.sof
updates/: README.txt  mf_io.c  mf_lblrtm.c  mf_model.c
updates/continuum_parameters/telluriccorr-4.2.0/src/: mf_convolution.c
updates/oda_v1/telluriccorr-4.2.0/src/: mf_constants.h  mf_model.c
updates/oda_v1_mregions/telluriccorr-4.2.0/src/: mf_lblrtm.c  mf_spectrum.c
updates/oda_v2/telluriccorr-4.2.0/src/: UpdateNotes.txt  mf_io.c  mf_io.h  mf_lblrtm.c  mf_model.c
updates/oda_v3/telluriccorr-4.2.0/src/: Makefile.am  UpdateNotes.txt  cerf.h  mf_constants.h  mf_io.c  mf_io.h  mf_lblrtm.c  mf_lblrtm.h  mf_lnfl.c  mf_lnfl.h  mf_model.c
updates/qwkmf/telluriccorr-4.2.0/src/: .~lock.DramaticImprovementoftheMolecfit.docx#  DramaticImprovementoftheMolecfit.docx  NOTES.txt  mf_QWKA.c  mf_QWKA.h  mf_convolution.c  mf_convolution.c_ref_src_code  mf_fit.c  mf_fit.c_ref_src_code  mf_io.c  mf_io.h
updates/test/telluriccorr-4.2.0/src/: mf_convolution.c  mf_convolution.h  mf_convolution_new.c  scrp.c
updates/wcplsvd/telluriccorr-4.2.0/src/: mf_convolution.c
updates/wgsl/telluriccorr-4.2.0/src/: README.txt  mf_convolution.c.wtf  mf_convolution.h
